# lens4SAE

./: .gitignore  FINDINGS.md  LICENSE  PLAYGROUND_GUIDE.md  PREREG.md  PROTOCOL_NOTES.md  README.md  apples_arith.py  arith_steer.py  chase_l20.py  close_asterisk.py  computed_concepts.py  depth_profiles.py  featurescope_report.html  generalize_computed.py  issue1_validate.py  layer_sweep.py  mixed_head.py  necessity_demo.py  optimal_threshold_pilot.py  phase_a.py  phase_a2.py  phase_a2_results.json  phase_a_results.json  phase_bc.py  phase_bc_results.backup.json  phase_bc_results.json  phase_d.py  phase_d_results.json  playground.html  playground.py  playground_data.json  pyproject.toml  read_depth.py  reasoning_read.py  report_html.py  run_phase_d.command  run_playground.command  run_screen.command  run_sweep.command  (+5 more)
examples/: reviews.csv
src/featurescope/: __init__.py  cli.py  concepts.py  core.py  data.py
tests/: test_featurescope.py
